--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
 title: Tri's Musings
-subtitle: I Write, Therefore I Am
+subtitle: I Write About Technology, Career, Philosophy, and Life in General
 ---
 
